Fix timeline spacing

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -147,7 +147,13 @@ ul > li {
 }
 
 .event + .event {
-	margin-top: 12px;
+	padding-top: 12px;
+}
+.timeline>.event + .event {
+	padding-top: 0;
+}
+.timeline>.event + .event:not(:last-child) {
+	padding-bottom: 12px;
 }
 .event > * {
 	margin-bottom: 0;
